Front de Categorias de Artigo pronto

--- a/BlogPessoal/BlogPessoal.Web/Views/Home/Index.cshtml
+++ b/BlogPessoal/BlogPessoal.Web/Views/Home/Index.cshtml
@@ -3,5 +3,37 @@
     ViewBag.Title = "Index";
 }
 
+@*
+@section ScriptContent {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            console.log('Ready disparado');
+        });
+    </script>
+    <script type="text/javascript">
+        $(function () {
+            alert('Carregou.');
+            }); 
+    </script>
+}
+*@
+
 <h2>Index</h2>
 
+
+
+
+<div class="tn-group btn-group-toggle" data-toggle="buttons">
+    <label class="btn btn-primary active">
+        <input type="radio" name="options" id="option1" autocomplete="off" checked="">
+        Active
+    </label>
+    <label class="btn btn-primary">
+        <input type="radio" name="options" id="option2" autocomplete="off">
+        Radio
+    </label>
+    <label class="btn btn-primary">
+        <input type="radio" name="options" id="option3" autocomplete="off">
+        Radio
+    </label>
+</div>
