--- a/BlogPessoal/BlogPessoal.Web/Views/Shared/_Layout.cshtml
+++ b/BlogPessoal/BlogPessoal.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Primeira Aplicação ASP.NET MVC 5 - Entity Framework</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bootstrap-lumen.css" rel="stylesheet" type="text/css" />
@@ -23,9 +23,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Categorias de artigo", "Index", "CategoriasDeArtigo")</li>
+                    <li>@Html.ActionLink("Autores", "Index", "Autors")</li>
+                    <li>@Html.ActionLink("Artigos", "Index", "Artigos")</li>
                 </ul>
             </div>
         </div>
@@ -34,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Primeira Aplicação ASP.NET MVC 5 - Entity Framework</p>
         </footer>
     </div>
 
